--- a/app/src/main/res/layout/fragment_babies.xml
+++ b/app/src/main/res/layout/fragment_babies.xml
@@ -62,4 +62,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
+
+    <ImageView
+        android:id="@+id/img_empty"
+        android:layout_width="@dimen/_50dp"
+        android:layout_height="@dimen/_50dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:src="@drawable/crying" />
 </RelativeLayout>
