--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,5 @@
     <dimen name="spacing_small">3dp</dimen>
     <dimen name="_25dp">25dp</dimen>
     <dimen name="_20sp">20sp</dimen>
+    <dimen name="spacing_xxlarge">50dp</dimen>
 </resources>
