--- a/app/src/main/res/layout/fragment_add_prescription.xml
+++ b/app/src/main/res/layout/fragment_add_prescription.xml
@@ -8,37 +8,44 @@
     android:weightSum="3"
     tools:context=".screens.dashboard.child.AddPrescriptionFragment">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/add_patient_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2.7" />
+<!--
+    <include
+        android:id="@+id/custom"
+        layout="@layout/prescription" />-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal"
-        android:padding="@dimen/_15dp"
-        android:weightSum="2">
+       <androidx.fragment.app.FragmentContainerView
+           android:id="@+id/add_patient_container"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:layout_weight="2.7"
+           android:visibility="visible" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5dp"
-            android:backgroundTint="@color/dim_red"
-            android:text="@string/action_submit" />
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:gravity="end"
+           android:orientation="horizontal"
+           android:padding="@dimen/_15dp"
+           android:visibility="visible"
+           android:weightSum="2">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_cancel"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5dp"
-            android:text="@string/action_cancel"
-            app:strokeColor="@color/dim_red" />
+           <com.google.android.material.button.MaterialButton
+               android:id="@+id/btn_submit"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_margin="@dimen/_5dp"
+               android:backgroundTint="@color/dim_red"
+               android:text="@string/action_submit" />
 
-    </LinearLayout>
+           <com.google.android.material.button.MaterialButton
+               android:id="@+id/btn_cancel"
+               style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_margin="@dimen/_5dp"
+               android:text="@string/action_cancel"
+               app:strokeColor="@color/dim_red" />
+
+       </LinearLayout>
 
 </LinearLayout>
