--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/_100dp"
     tools:context=".screens.dashboard.HomeFragment">
 
     <LinearLayout
@@ -55,7 +56,6 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/action_enter_stock"
                 android:layout_width="0dp"
-
                 android:layout_height="wrap_content"
                 android:layout_weight="1.3"
                 android:backgroundTint="@color/design_default_color_error"
@@ -603,10 +603,10 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textColor="@color/black" />
 
-                <com.github.mikephil.charting.charts.BarChart
+                <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/total_term_chart"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="400dp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
