--- a/app/src/main/res/layout/order_list_view.xml
+++ b/app/src/main/res/layout/order_list_view.xml
@@ -69,8 +69,8 @@
         android:visibility="gone">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_25dp"
+            android:layout_width="@dimen/_10dp"
+            android:layout_height="@dimen/_10dp"
             android:src="@drawable/baseline_edit_24"
             app:tint="@color/colorPrimary" />
 
@@ -78,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/process"
+            android:textSize="12sp"
             android:textColor="@color/colorPrimary" />
     </LinearLayout>
 </LinearLayout>
