--- a/app/src/main/res/layout/side_menu.xml
+++ b/app/src/main/res/layout/side_menu.xml
@@ -182,12 +182,12 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ln_dhm_dashboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_15dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
-
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -362,6 +362,7 @@
                 android:layout_height="0dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/ln_sync"
             android:layout_width="match_parent"
