--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,4 +51,5 @@
     <dimen name="_25dp">25dp</dimen>
     <dimen name="_20sp">20sp</dimen>
     <dimen name="spacing_xxlarge">50dp</dimen>
+    <dimen name="_20dp">20dp</dimen>
 </resources>
