--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:statusBarColor">@color/colorStatusBar</item>
-        <item name="fontFamily">@font/montserrat</item>
+      <!--  <item name="fontFamily">@font/montserrat</item>-->
     </style>
 
     <style name="CustomDialogTheme">
