Feed Prescription Questionnaire

--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -73,6 +73,9 @@
         <action
             android:id="@+id/navigate_to_baby_feeding"
             app:destination="@id/babyFeedsFragment" />
+        <action
+            android:id="@+id/navigate_to_babies_panel"
+            app:destination="@id/babiesFragment" />
     </fragment>
     <fragment
         android:id="@+id/babyDashboardFragment"
